src/objects/ACCL__Order_Template_Product_Selector_Group__c.object
<CustomObject>
    <description>Holds the relation between Order Template and Product selection.</description>
    <fields>
        <fullName>ACCL__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default Flag</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Level_1__c</fullName>
        <description>Product Selector Level 1</description>
        <label>Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Basket</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>OutOfStock</fullName>
                </value>
                <value>
                    <fullName>Basket1</fullName>
                </value>
                <value>
                    <fullName>Basket2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Level_2__c</fullName>
        <description>Product Selector Level 2</description>
        <label>Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Order_Template_Id__c</fullName>
        <description>Reference to Order Template.</description>
        <label>Order Template Id</label>
        <referenceTo>ACCL__Order_Template__c</referenceTo>
        <relationshipLabel>Product Selector Groups</relationshipLabel>
        <relationshipName>Product_Selector_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Hyperlink to the detail page of the record</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <label>Order Template Product Selector Group</label>
    <nameField>
        <displayFormat>PSG -{000}</displayFormat>
        <label>Order Template Product Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Template Product Selector Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>